package at.spengergasse.foodora.model.Enum;

public enum DeliveryStatus {
    DELIVERED
}