package at.spengergasse.foodora.model.Enum;

public enum OrderStatus {
    create,
    accept,
    preparing,
    deviery,
    done
}
