package at.spengergasse.foodora.model.resturant;

import at.spengergasse.foodora.model.BaseEntity;

public class Owner extends BaseEntity
{
}
